# spectral-grid-inference

./: README.md  pyproject.toml
scripts/: Fit-grid-interpolate.ipynb  Make-grid-values.ipynb  make_korg_grid.jl
